src/test/deca/context/invalid/langage_essentiel/troisieme_passe/regle_3_70.deca
// Description:
//    regle 3.70, pas un champs
//
// Resultats:
//    Ligne 13: 'f' must be a field.
class A {
    int f() {
    return 1;
    }
}
{
    A a = new A();
    a.f = 2;
}